# ampere-pmu-profiler

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
.github/workflows/: ci.yml
src/collector/: cli.py  cpu.py  events.py  logger_setup.py  profiler.py  utils.py
src/events/: events.txt  events_altra.txt  events_ampereone_ac03.txt  events_ampereone_ac04.txt  events_ampereone_ac04_1.txt  events_tda_ac03.txt  events_tda_ac04.txt
src/postprocessor/: icicle.py  plot.py  postprocess.py  sunburst.py  tda.py
tests/: test_cli.py  test_posprocess.py  test_tda.py
